--- a/playGrd/lab3/myDjango-app/mysite/pure_html/templates/index1.html
+++ b/playGrd/lab3/myDjango-app/mysite/pure_html/templates/index1.html
@@ -8,21 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-Title</title>
 
-    <link rel="stylesheet" href="{% static './main-style.css' %}">
+    <link rel="stylesheet" href="{% static 'main-style.css' %}">
     <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}">
     <link rel="preconnect" href="{% static 'https://fonts.gstatic.com' %}" crossorigin>
     <link href="{% static 'https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap' %}" rel="stylesheet">
 </head>
 
-<body class="full super-center-grid">
-    <div class="super-center-grid main-layout default-shadow">
-        <h1>HelloWorld</h1>
-        <h2>Sricharan Yedu Thirnathi (st122037)</h2>
-        <a href="index1.html">Javascript setInterval</a>
-        <a href="index2.html">Javascript button</a>
-        <a href="index3.html">LAB-2</a>
-    </div>
+<body class="full super-center-grid ">
 
+    <div class="super-center-grid main-layout default-shadow">
+        <h1>Timer</h1>
+        <h1 id="time">-</h1>
+    </div>
 </body>
+<script src="{% static '/interval/app1.js' %}"></script>
 
 </html>
