--- a/playGrd/lab3/myDjango-app/mysite/pure_html/templates/index3.html
+++ b/playGrd/lab3/myDjango-app/mysite/pure_html/templates/index3.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-Title</title>
 
-    <link rel="stylesheet" href="../main-style.css">
-    <link rel="stylesheet" href="./button.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'main-style.css' %}">
+    <link rel="stylesheet" href="{% static 'button.css' %}">
+    <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}">
+    <link rel="preconnect" href="{% static 'https://fonts.gstatic.com' %}" crossorigin>
+    <link href="{% static 'https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap' %}" rel="stylesheet">
 </head>
 
 <body class="full super-center-grid ">
@@ -23,6 +24,6 @@
         <h1 id="count">-</h1>
     </div>
 </body>
-<script src="./app3.js"></script>
+<script src="{% static '/button/app3.js' %}"></script>
 
 </html>
